# Charlie-AI

./: .gitignore  Dockerfile  docker-compose.yml  main.py
charlie_ai_core/: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
charlie_ai_core/app/: main.py
charlie_ai_core/app/api/: lesson.py
charlie_ai_core/app/core/: config.py  engine.py  llm_client.py  models.py  prompts.py
charlie_ai_core/app/models/: llm.py  schemas.py
charlie_ai_core/app/services/: llm_client.py  orchestrator.py  session_store.py
charlie_ai_core/tests/: test_lesson.py  test_unit.py
core/: config.py  engine.py  llm_client.py  prompts.py
